# observabilidade

./: LICENSE  README.md  pyproject.toml
json_logger/: __init__.py  formatter.py
tests/: test_formatter.py
